bin_PROGRAMS = mouse_warping_fix_broken ship_scanner_fix no_elections starback_fix

common_sources = bin.c bin.h patch.c patch.h patcher.c patcher.h

mouse_warping_fix_broken_SOURCES = mouse_warping_fix_broken.c $(common_sources)
ship_scanner_fix_SOURCES = ship_scanner_fix.c $(common_sources)
no_elections_SOURCES = no_elections.c $(common_sources)
starback_fix_SOURCES = starback_fix.c $(common_sources)
